syntax = "proto3";
option go_package = "github.com/Vyary/rdpc/proto";
package proto;

service Database {
  rpc InsertStats(Stats) returns (Empty) {}
  rpc InsertItem(Item) returns (Empty) {}
  rpc InsertItemWithID(Item) returns (Empty) {}
  rpc InsertQuery(Query) returns (Empty) {}
  rpc InsertPrice(Price) returns (Empty) {}

  rpc HasItem(HasItemRequest) returns (BoolResponse) {}
  rpc HasInfo(ItemIDRequest) returns (BoolResponse) {}
  rpc HasPriceQuery(HasPriceRequest) returns (BoolResponse) {}

  rpc GetBaseItems(CategoryRequest) returns (BaseItems) {}
  rpc GetInfoQueries(Empty) returns (Queries) {}
  rpc GetPriceQueries(Empty) returns (Queries) {}
  rpc GetMod(GetModRequest) returns (GetModResponse) {}
  rpc GetItemsByCategory(CategoryRequest) returns (Items) {}

  rpc UpdateItemInfo(Item) returns (Empty) {}
  rpc UpdateNextRun(Query) returns (Empty) {}

  rpc DeleteQuery(ItemIDRequest) returns (Empty) {}
}

message Stats {
  string id = 1;
  string text = 2;
  string type = 3;
}

message Item {
  string id = 1;
  string realm = 2;
  string category = 3;
  string sub_category = 4;
  string icon = 5;
  string icon_tier_text = 6;
  string name = 7;
  string base_type = 8;
  string rarity = 9;
  int32 w = 10;
  int32 h = 11;
  int32 ilvl = 12;
  bytes socketed_items = 13;
  bytes properties = 14;
  bytes requirements = 15;
  bytes enchant_mods = 16;
  bytes rune_mods = 17;
  bytes implicit_mods = 18;
  bytes explicit_mods = 19;
  bytes fractured_mods = 20;
  bytes desecrated_mods = 21;
  string flavour_text = 22;
  string descr_text = 23;
  string sec_descr_text = 24;
  bool support = 25;
  bool duplicated = 26;
  bool corrupted = 27;
  bool sanctified = 28;
  bool desecrated = 29;
}

message Query {
  int64 id = 1;
  string item_id = 2;
  string realm = 3;
  string league = 4;
  string query = 5;
  int64 update = 6;
  int64 next_run = 7;
  string status = 8;
  int64 started_at = 9;
  bool run_once = 10;
}

message Price {
  string item_id = 1;
  double price = 2;
  string currency_id = 3;
  int64 volume = 4;
  int64 stock = 5;
  string league = 6;
  int64 timestamp = 7;
}

message BaseItem {
  string id = 1;
  string realm = 2;
  string name = 3;
  string base_type = 4;
}

message HasItemRequest {
  string name = 1;
  string base_type = 2;
}

message ItemIDRequest { string item_id = 1; }

message HasPriceRequest {
  string item_id = 1;
  string league = 2;
}

message Empty {}

message BoolResponse { bool has = 1; }

message CategoryRequest { string category = 1; }

message Queries { repeated Query queries = 1; }

message Items { repeated Item items = 1; }

message BaseItems { repeated BaseItem items = 1; }

message GetModRequest { string hash = 1; }

message GetModResponse { string mod = 1; }
